# mirai-analytics

./: .env  .gitignore  README.md
backend/: .gitignore  app.py  elint.py  environment.yml  main_app.py  pyproject.toml
backend/api/: accounts.py  chatbot.py  clients.py  insights.py  news.py  podcasts.py  portfolio.py  reports.py  sources.py
backend/app/: register_blueprints.py
backend/core/: tasks.py
backend/db/: models.py  session.py
backend/pipelines/: chatbot.py
backend/pipelines/graphs/: graph.py
backend/pipelines/graphs/company_sentiment_analysis_graph/: graph.py
backend/pipelines/graphs/company_sentiment_analysis_graph/nodes/: entity_extraction.py
backend/repositories/: analysis.py
backend/scripts/: get_stocks_statistic.py
backend/services/: generate_insight.py
frontend/: .env  App.tsx  app.json  babel.config.js  cesconfig.jsonc  components.json  eslint.config.js  index.html  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/.expo/: devices.json
frontend/.expo/prebuild/: cached-packages.json
frontend/android/app/: build.gradle
frontend/components/financial/: AIInsights.tsx  MarketOverview.tsx
frontend/components/onboarding/: OnboardingFlow.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  (+4 more)
frontend/hooks/: useRealtimeQuotes.ts
frontend/ios/: Podfile
frontend/navigation/: MainTabs.tsx
frontend/pages/: Assistant.tsx  Home.tsx  News.tsx  Portfolio.tsx
frontend/services/: marketData.ts
frontend/src/: App.tsx  index.css
(+15 files in other folders)
